add 2 api change statua  and count freelancer and clien